' Generated by UML Generator
' Encoded: fLPBQzmm4BxxL-YuszZGyr92GaEX4Cf2zbRAefKLTwWj6LdEeMd-UoNhiHh9cpvoMy_Zcs_cqqXxCscgz3pqrVG3n4WL7GZhwJJTQgtWD6l-cKdn03yvULzzXvOJ1ehrlAgMA4B7aJnNX5mz6o0Dx8KC5CI6gcxQaGS38RgltxOxyYIXhLv25kk12ysNp4R8uQHuYBOM9fNYChMqe3XZ84LgR6nT3xN1A3N163Kf4BOsk-FwovAusIR8LrCqOzZGYClyk9GeChqP4y2PTu5CaNpsb8JF45ewKv8UPplo5bhfHija2vqyFbAcPqNHYDtOzalmBWXYFJqO9VTAjZFJqeXuRxu_ZFxxEixTbTciLwW3O4JUnfcbyIkpG-vrz4o5j1CBUEvbGKJkzROnu3qQW4KiHc21ix3NnvPKe9tY7LKXT1DYTYJyIe97SmP07gIclINIolbaTk-ijSz8rKvLBbUBpbggrE0gHEWeRw27GMkIxna2h0c6mwfVK3ihWSNu_-syjSIAH6T5f77QVcaW6RRBy-QilR_SI3_BE-Z02Ed4qdIWdP37ba_Ct9RcS8FGYmD6S-Ab6gYMnMsNGRrDdPgiaZ3c5Gf1oaEMOXjspEsO2kzg1JpnGrAjq0ivLtdzcmQVO0BczqNC0rVoED8E19sY04nEcX-vUC9huU-YYNSp3FRQkAoEA_9MSLResMUj86UDbwZ5HmvXOSqotqhP_DcB58erINqhL7EWdFQbzo0DUQNPFnq5_pI-QvhuI7YJDAQWNfNlQzFykYwz_YHXvmqNhVapzHi
' URL: http://www.plantuml.com/plantuml/uml/fLPBQzmm4BxxL-YuszZGyr92GaEX4Cf2zbRAefKLTwWj6LdEeMd-UoNhiHh9cpvoMy_Zcs_cqqXxCscgz3pqrVG3n4WL7GZhwJJTQgtWD6l-cKdn03yvULzzXvOJ1ehrlAgMA4B7aJnNX5mz6o0Dx8KC5CI6gcxQaGS38RgltxOxyYIXhLv25kk12ysNp4R8uQHuYBOM9fNYChMqe3XZ84LgR6nT3xN1A3N163Kf4BOsk-FwovAusIR8LrCqOzZGYClyk9GeChqP4y2PTu5CaNpsb8JF45ewKv8UPplo5bhfHija2vqyFbAcPqNHYDtOzalmBWXYFJqO9VTAjZFJqeXuRxu_ZFxxEixTbTciLwW3O4JUnfcbyIkpG-vrz4o5j1CBUEvbGKJkzROnu3qQW4KiHc21ix3NnvPKe9tY7LKXT1DYTYJyIe97SmP07gIclINIolbaTk-ijSz8rKvLBbUBpbggrE0gHEWeRw27GMkIxna2h0c6mwfVK3ihWSNu_-syjSIAH6T5f77QVcaW6RRBy-QilR_SI3_BE-Z02Ed4qdIWdP37ba_Ct9RcS8FGYmD6S-Ab6gYMnMsNGRrDdPgiaZ3c5Gf1oaEMOXjspEsO2kzg1JpnGrAjq0ivLtdzcmQVO0BczqNC0rVoED8E19sY04nEcX-vUC9huU-YYNSp3FRQkAoEA_9MSLResMUj86UDbwZ5HmvXOSqotqhP_DcB58erINqhL7EWdFQbzo0DUQNPFnq5_pI-QvhuI7YJDAQWNfNlQzFykYwz_YHXvmqNhVapzHi
' Generated on: 2025-11-27T11:05:59.939786800

@startuml endes
skinparam classAttributeIconSize 0
hide circle

class app {
  +{static} main(args: String[]): void
}

class cliente {
  -nombre: String
  -correo: String
  -direccion: String
  --
  +cliente(nombre: String, correo: String, direccion: String)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getCorreo(): String
  +setCorreo(correo: String): void
  +getDireccion(): String
  +setDireccion(direccion: String): void
  +toString(): String
}

class pedido {
  -codigo_factura: String
  -clientePedido: cliente
  -listaProductos: List<producto>
  --
  +pedido(codigo_factura: String, cliente: cliente)
  +getCodigo_factura(): String
  +setCodigo_factura(codigo_factura: String): void
  +getClientePedido(): cliente
  +setClientePedido(clientePedido: cliente): void
  +getListaProductos(): List<producto>
  +setListaProductos(listaProductos: List<producto>): void
  +agregarProducto(producto: producto): void
  +precioTotal(): double
}

class producto {
  -codigo: String
  -nombre: String
  -autor: String
  -precio: double
  --
  +producto(codigo: String, nombre: String, autor: String, precio: double)
  +getCodigo(): String
  +setCodigo(codigo: String): void
  +getNombre(): String
  +setNombre(nombre: String): void
  +getAutor(): String
  +setAutor(autor: String): void
  +getPrecio(): double
  +setPrecio(precio: double): void
  +toString(): String
}

class productoDigital {
  -tamagno_descarga: int
  -tipo_formato: String
  --
  +productoDigital(codigo: String, nombre: String, autor: String, precio: double, tamagno_descarga: int, tipo_formato: String)
  +getTamagno_descarga(): int
  +setTamagno_descarga(tamagno_descarga: int): void
  +getTipo_formato(): String
  +setTipo_formato(tipo_formato: String): void
  +toString(): String
}

class productoFisico {
  -numero_paginas: int
  -coste_envio: double
  -codigo_seguimiento: String
  --
  +productoFisico(codigo: String, nombre: String, autor: String, precio: double, numero_paginas: int, coste_envio: double, codigo_seguimiento: String)
  +getNumero_paginas(): int
  +setNumero_paginas(numero_paginas: int): void
  +getCoste_envio(): double
  +setCoste_envio(coste_envio: double): void
  +getCodigo_seguimiento(): String
  +setCodigo_seguimiento(codigo_seguimiento: String): void
  +toString(): String
}

pedido *-- cliente
pedido o-- producto
productoDigital --|> producto
productoFisico --|> producto
@enduml